Add about me text

--- a/src/html/about.html
+++ b/src/html/about.html
@@ -24,29 +24,35 @@
         <h1 class="about__title--h1">Sobre mí</h1>
         <span class="about__title--icon">( )</span>
       </div>
-      <button type="button" class="about__cv">Descargar CV</button>
-      <!-- <h2 class="about__cv2">Descargar CV</h2> -->
+      <button type="button" class="about__cv">
+        <a
+          href="../files/CV-Natalia-Migallón-Front-end-CASTELLANO.pdf"
+          download="CV Natalia Migallón-Front-end-CASTELLANO.pdf"
+          >Descargar CV</a
+        >
+      </button>
       <p class="about__text">
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione
-        numquam a expedita, sequi quisquam praesentium impedit. Quod nam omnis,
-        error doloribus soluta mollitia dolorem reiciendis non sint quaerat
-        minima eius! Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-        Ratione numquam a expedita, sequi quisquam praesentium impedit. Quod nam
-        omnis, error doloribus soluta mollitia dolorem reiciendis non sint
-        quaerat minima eius! Lorem ipsum dolor, sit amet consectetur adipisicing
-        elit. Ratione numquam a expedita, sequi quisquam praesentium impedit.
-        Quod nam omnis, error doloribus soluta mollitia dolorem reiciendis non
-        sint quaerat minima eius! Lorem ipsum dolor, sit amet consectetur
-        adipisicing elit. Ratione numquam a expedita, sequi quisquam praesentium
-        impedit. Quod nam omnis, error doloribus soluta mollitia dolorem
-        reiciendis non sint quaerat minima eius! Lorem ipsum dolor, sit amet
-        consectetur adipisicing elit. Ratione numquam a expedita, sequi quisquam
-        praesentium impedit. Quod nam omnis, error doloribus soluta mollitia
-        dolorem reiciendis non sint quaerat minima eius! Lorem ipsum dolor, sit
-        amet consectetur adipisicing elit. Ratione numquam a expedita, sequi
-        quisquam praesentium impedit. Quod nam omnis, error doloribus soluta
-        mollitia dolorem reiciendis non sint quaerat minima eius!
+        ¡Hola! Soy Natalia Migallón, programadora front-end e historiadora del
+        arte.
       </p>
+      <p class="about__text">
+        Desde muy joven he sentido atracción por todo lo que rodea a la cultura
+        visual; desde las cuevas de Altamira hasta el diseño gráfico
+        contemporáneo, cuya presencia en la tecnología es esencial como vehículo
+        comunicativo.
+      </p>
+      <p class="about__text">
+        Tras una tímida incursión en el mundo HTML tiempo atrás, fue hace unos
+        meses cuando me lancé al mundo de la programación web de la mano de
+        <a
+          class="about__text--adaLink"
+          href="https://adalab.es/"
+          target="_blank"
+          >Adalab</a
+        >, en donde he aprendido nuevos lenguajes y distintas formas de pensar,
+        convirtiéndose el código en un ente indispensable en mi vida.
+      </p>
+      <p class="about__text"></p>
     </main>
     <include src="./partials/footer.html"></include>
     <script src="./assets/js/main.js"></script>
