--- a/src/html/projects.html
+++ b/src/html/projects.html
@@ -18,244 +18,228 @@
   </head>
 
   <body class="page-projects">
-      <include src="./partials/header.html"></include>
-      <main class="projects">
-        <!-- <img
+    <include src="./partials/header.html"></include>
+    <main class="projects">
+      <!-- <img
           src="./assets/images/Remman von Zwet.png"
           alt="Poet Remman von Zwet"
           class="projects__photo"
         /> -->
-        <div class="projects__title">
-          <h1 class="projects__title--h1">Proyectos</h1>
-          <span class="projects__title--icon">( )</span>
-        </div>
-        <!-- <div class="projects__title">
-          <h1 class="projects__title--h1">Proyectos</h1>
-          <span class="projects__title--icon">( )</span>
-        </div>
-        <div class="projects__line"> -->
-          <!-- <p class="projects__text">
-            En esta sección comparto los proyectos que he llevado a cabo en 2021.
-          </p> -->
-          <h3 class="projects__title-works">Delicious Profile Cards</h3>
-          <h4 class="projects__tools">
-            React.js | Express.js | SQLite | HTML5 | CSS3 (Flexbox, Grid) | SASS
-          </h4>
-          <img
-            src="./assets/images/projects-delicious.png"
-            alt=""
-            class="projects__image"
-          />
+      <div class="projects__title">
+        <h1 class="projects__title--h1">Proyectos</h1>
+        <span class="projects__title--icon">( )</span>
+      </div>
+      <h3 class="projects__title-works">Delicious Profile Cards</h3>
+      <h4 class="projects__tools">
+        React.js | Express.js | SQLite | HTML5 | CSS3 (Flexbox, Grid) | SASS
+      </h4>
+      <img
+        src="./assets/images/projects-delicious.png"
+        alt=""
+        class="projects__image"
+      />
 
-          <p class="projects__text">
-            Refactorización a React.js de un código heredado en Vanilla
-            Javascript. Además se ha creado un servidor propio con Node.js,
-            Express.js y SQLite.
-          </p>
-          <div>
-            <button class="projects__btn-web">
-              <a
-                href="https://delicious-profile-card.herokuapp.com/#/"
-                target="_blank"
-                >Web</a
-              >
-            </button>
-            <button class="projects__btn-code">
-              <a
-                href="https://github.com/NataliaMigallon/delicious-profile-cards"
-                target="_blank"
-                >Código</a
-              >
-            </button>
-          </div>
-          <h3 class="projects__title-works">Rick and Morty Character Finder</h3>
-          <img
-            src="./assets/images/projects-rick-and-morty.png"
-            alt=""
-            class="projects__image"
-          />
-          <h4 class="projects__tools">
-            React.js | HTML5 | CSS3 (Flexbox, Grid) | SASS
-          </h4>
-          <p class="projects__text">
-            Buscador de personajes de la serie Rick and Morty. Programada en
-            React.js, los datos de los personajes se extraen de una API a través
-            del mecanismo Fetch. Consta de tres filtros de búsqueda y, de cada
-            personaje, se puede consultar información más detallada con la
-            creación de una segunda tarjeta de datos. Dispone de un botón de
-            retorno, en donde queda almacenada la búsqueda realizada.
-          </p>
-          <div>
-            <button class="projects__btn-web">
-              <a
-                href="https://nataliamigallon.github.io/Rick-and-Morty-character-finder/#/"
-                target="_blank"
-                >Web</a
-              >
-            </button>
-            <button class="projects__btn-code">
-              <a
-                href="https://github.com/NataliaMigallon/Rick-and-Morty-character-finder"
-                target="_blank"
-                >Código</a
-              >
-            </button>
-          </div>
-          <img
-            src="./assets/images/projects-series-finder.png"
-            alt=""
-            class="projects__image"
-          />
-          <h3 class="projects__title-works">Series Finder</h3>
-          <h4 class="projects__tools">
-            Vanilla Javascript | HTML5 | CSS3 (Flexbox, Grid) | SASS
-          </h4>
-          <p class="projects__text">
-            Buscador de series cuyos datos se extraen de una API a través del
-            mecanismo Fetch. Programado en Vanilla Javascript, permite almacenar
-            en el local storage las series seleccionadas como favoritas a través
-            de un click sobre la carátula.
-          </p>
-          <div>
-            <button class="projects__btn-web">
-              <a
-                href="https://nataliamigallon.github.io/Series-Finder/"
-                target="_blank"
-                >Web</a
-              >
-            </button>
-            <button class="projects__btn-code">
-              <a
-                href="https://github.com/NataliaMigallon/Series-Finder"
-                target="_blank"
-                >Código</a
-              >
-            </button>
-          </div>
-          <img
-            src="./assets/images/projects-look-like-loop.png"
-            alt=""
-            class="projects__image"
-          />
-          <h3 class="projects__title-works">Look Like Loop Cards</h3>
-          <h4 class="projects__tools">
-            Vanilla Javascript | HTML5 | CSS3 (Flexbox, Grid) | SASS | Gulp
-          </h4>
-          <p class="projects__text">
-            Aplicación para generar tarjetas de visita virtuales programada con
-            Vanilla Javascript. En ella el usuario introduce los datos
-            requeridos, hace el envío de los mismos y el servidor le devuelve
-            una URL con la tarjeta, que puede ser compartida en Twitter a través
-            de un botón que se incluye en la web. Asimismo, los datos quedarán
-            almacenados en el local storage para una mejor experiencia de
-            usuario.
-          </p>
-          <div>
-            <button class="projects__btn-web">
-              <a
-                href="https://nataliamigallon.github.io/Look-Like-Loop-Cards/"
-                target="_blank"
-                >Web</a
-              >
-            </button>
-            <button class="projects__btn-code">
-              <a
-                href="https://github.com/NataliaMigallon/Look-Like-Loop-Cards"
-                target="_blank"
-                >Código</a
-              >
-            </button>
-          </div>
-          <img
-            src="./assets/images/projects-pokemon.png"
-            alt=""
-            class="projects__image"
-          />
-          <h3 class="projects__title-works">Pokemon</h3>
-          <h4 class="projects__tools">
-            React.js | HTML5 | CSS3 (Flexbox, Grid) | SASS
-          </h4>
-          <p class="projects__text">
-            Listado de personajes de Pokemon, cuyos datos se extraen de un
-            fichero .json, y se renderizan usando como soporte React.js. La
-            funcionalidad de esta web es la posibilidad de seleccionar cada
-            tarjeta del personaje para señalarla como favorita.
-          </p>
-          <div>
-            <button class="projects__btn-web">
-              <a
-                href="https://nataliamigallon.github.io/Pokemons-List/"
-                target="_blank"
-                >Web</a
-              >
-            </button>
-            <button class="projects__btn-code">
-              <a
-                href="https://github.com/NataliaMigallon/Pokemons-List"
-                target="_blank"
-                >Código</a
-              >
-            </button>
-          </div>
-          <img
-            src="./assets/images/projects-indemo.png"
-            alt=""
-            class="projects__image"
-          />
-          <h3 class="projects__title-works">#InDemo</h3>
-          <h4 class="projects__tools">HTML5 | CSS3 (Flexbox, Grid) | SASS</h4>
-          <p class="projects__text">
-            Web colaborativa responsive que consta de diferentes secciones,
-            incluyendo un formulario de envío. Se ha hecho uso de diferentes
-            métodos como Flexbox, Grid, transiciones y animaciones.
-          </p>
-          <div>
-            <button class="projects__btn-web">
-              <a
-                href="https://nataliamigallon.github.io/InDemo/"
-                target="_blank"
-                >Web</a
-              >
-            </button>
-            <button class="projects__btn-code">
-              <a
-                href="https://github.com/NataliaMigallon/InDemo"
-                target="_blank"
-                >Código</a
-              >
-            </button>
-          </div>
-          <img
-            src="./assets/images/projects-anonymous.png"
-            alt=""
-            class="projects__image"
-          />
-          <h3 class="projects__title-works">Anonymous Proxy</h3>
-          <h4 class="projects__tools">HTML5 | CSS3 (Flexbox, Grid) | SASS</h4>
-          <p class="projects__text">
-            Web sencilla para practicar la maquetación responsive, haciendo uso
-            de diferentes métodos como Flexbox, Grid, transiciones y
-            animaciones.
-          </p>
-          <div>
-            <button class="projects__btn-web">
-              <a
-                href="https://nataliamigallon.github.io/Anonymous-Proxy/"
-                target="_blank"
-                >Web</a
-              >
-            </button>
-            <button class="projects__btn-code">
-              <a
-                href="https://github.com/NataliaMigallon/Anonymous-Proxy"
-                target="_blank"
-                >Código</a
-              >
-            </button>
-          </div>
-        </div>
-      </main>
-      <include src="./partials/footer.html"></include>
+      <p class="projects__text">
+        Refactorización a React.js de un código heredado en Vanilla Javascript.
+        Además se ha creado un servidor propio con Node.js, Express.js y SQLite.
+      </p>
+      <div>
+        <button class="projects__btn-web">
+          <a
+            href="https://delicious-profile-card.herokuapp.com/#/"
+            target="_blank"
+            >Web</a
+          >
+        </button>
+        <button class="projects__btn-code">
+          <a
+            href="https://github.com/NataliaMigallon/delicious-profile-cards"
+            target="_blank"
+            >Código</a
+          >
+        </button>
+      </div>
+      <h3 class="projects__title-works">Rick and Morty Character Finder</h3>
+      <img
+        src="./assets/images/projects-rick-and-morty.png"
+        alt=""
+        class="projects__image"
+      />
+      <h4 class="projects__tools">
+        React.js | HTML5 | CSS3 (Flexbox, Grid) | SASS
+      </h4>
+      <p class="projects__text">
+        Buscador de personajes de la serie Rick and Morty. Programada en
+        React.js, los datos de los personajes se extraen de una API a través del
+        mecanismo Fetch. Consta de tres filtros de búsqueda y, de cada
+        personaje, se puede consultar información más detallada con la creación
+        de una segunda tarjeta de datos. Dispone de un botón de retorno, en
+        donde queda almacenada la búsqueda realizada.
+      </p>
+      <div>
+        <button class="projects__btn-web">
+          <a
+            href="https://nataliamigallon.github.io/Rick-and-Morty-character-finder/#/"
+            target="_blank"
+            >Web</a
+          >
+        </button>
+        <button class="projects__btn-code">
+          <a
+            href="https://github.com/NataliaMigallon/Rick-and-Morty-character-finder"
+            target="_blank"
+            >Código</a
+          >
+        </button>
+      </div>
+      <img
+        src="./assets/images/projects-series-finder.png"
+        alt=""
+        class="projects__image"
+      />
+      <h3 class="projects__title-works">Series Finder</h3>
+      <h4 class="projects__tools">
+        Vanilla Javascript | HTML5 | CSS3 (Flexbox, Grid) | SASS
+      </h4>
+      <p class="projects__text">
+        Buscador de series cuyos datos se extraen de una API a través del
+        mecanismo Fetch. Programado en Vanilla Javascript, permite almacenar en
+        el local storage las series seleccionadas como favoritas a través de un
+        click sobre la carátula.
+      </p>
+      <div>
+        <button class="projects__btn-web">
+          <a
+            href="https://nataliamigallon.github.io/Series-Finder/"
+            target="_blank"
+            >Web</a
+          >
+        </button>
+        <button class="projects__btn-code">
+          <a
+            href="https://github.com/NataliaMigallon/Series-Finder"
+            target="_blank"
+            >Código</a
+          >
+        </button>
+      </div>
+      <img
+        src="./assets/images/projects-look-like-loop.png"
+        alt=""
+        class="projects__image"
+      />
+      <h3 class="projects__title-works">Look Like Loop Cards</h3>
+      <h4 class="projects__tools">
+        Vanilla Javascript | HTML5 | CSS3 (Flexbox, Grid) | SASS | Gulp
+      </h4>
+      <p class="projects__text">
+        Aplicación para generar tarjetas de visita virtuales programada con
+        Vanilla Javascript. En ella el usuario introduce los datos requeridos,
+        hace el envío de los mismos y el servidor le devuelve una URL con la
+        tarjeta, que puede ser compartida en Twitter a través de un botón que se
+        incluye en la web. Asimismo, los datos quedarán almacenados en el local
+        storage para una mejor experiencia de usuario.
+      </p>
+      <div>
+        <button class="projects__btn-web">
+          <a
+            href="https://nataliamigallon.github.io/Look-Like-Loop-Cards/"
+            target="_blank"
+            >Web</a
+          >
+        </button>
+        <button class="projects__btn-code">
+          <a
+            href="https://github.com/NataliaMigallon/Look-Like-Loop-Cards"
+            target="_blank"
+            >Código</a
+          >
+        </button>
+      </div>
+      <img
+        src="./assets/images/projects-pokemon.png"
+        alt=""
+        class="projects__image"
+      />
+      <h3 class="projects__title-works">Pokemon</h3>
+      <h4 class="projects__tools">
+        React.js | HTML5 | CSS3 (Flexbox, Grid) | SASS
+      </h4>
+      <p class="projects__text">
+        Listado de personajes de Pokemon, cuyos datos se extraen de un fichero
+        .json, y se renderizan usando como soporte React.js. La funcionalidad de
+        esta web es la posibilidad de seleccionar cada tarjeta del personaje
+        para señalarla como favorita.
+      </p>
+      <div>
+        <button class="projects__btn-web">
+          <a
+            href="https://nataliamigallon.github.io/Pokemons-List/"
+            target="_blank"
+            >Web</a
+          >
+        </button>
+        <button class="projects__btn-code">
+          <a
+            href="https://github.com/NataliaMigallon/Pokemons-List"
+            target="_blank"
+            >Código</a
+          >
+        </button>
+      </div>
+      <img
+        src="./assets/images/projects-indemo.png"
+        alt=""
+        class="projects__image"
+      />
+      <h3 class="projects__title-works">#InDemo</h3>
+      <h4 class="projects__tools">HTML5 | CSS3 (Flexbox, Grid) | SASS</h4>
+      <p class="projects__text">
+        Web colaborativa responsive que consta de diferentes secciones,
+        incluyendo un formulario de envío. Se ha hecho uso de diferentes métodos
+        como Flexbox, Grid, transiciones y animaciones.
+      </p>
+      <div>
+        <button class="projects__btn-web">
+          <a href="https://nataliamigallon.github.io/InDemo/" target="_blank"
+            >Web</a
+          >
+        </button>
+        <button class="projects__btn-code">
+          <a href="https://github.com/NataliaMigallon/InDemo" target="_blank"
+            >Código</a
+          >
+        </button>
+      </div>
+      <img
+        src="./assets/images/projects-anonymous.png"
+        alt=""
+        class="projects__image"
+      />
+      <h3 class="projects__title-works">Anonymous Proxy</h3>
+      <h4 class="projects__tools">HTML5 | CSS3 (Flexbox, Grid) | SASS</h4>
+      <p class="projects__text">
+        Web sencilla para practicar la maquetación responsive, haciendo uso de
+        diferentes métodos como Flexbox, Grid, transiciones y animaciones.
+      </p>
+      <div>
+        <button class="projects__btn-web">
+          <a
+            href="https://nataliamigallon.github.io/Anonymous-Proxy/"
+            target="_blank"
+            >Web</a
+          >
+        </button>
+        <button class="projects__btn-code">
+          <a
+            href="https://github.com/NataliaMigallon/Anonymous-Proxy"
+            target="_blank"
+            >Código</a
+          >
+        </button>
+      </div>
+    </main>
+    <include src="./partials/footer.html"></include>
     <script src="./assets/js/main.js"></script>
   </body>
 </html>
