--- a/src/html/index.html
+++ b/src/html/index.html
@@ -17,11 +17,9 @@
     <link rel="icon" href="./assets/images/favicon.png" />
   </head>
 
-  <body>
-    <div class="page-home">
+  <body class="page-home">
       <include src="./partials/main.html"></include>
       <include src="./partials/footer.html"></include>
-    </div>
     <script src="./assets/js/main.js"></script>
   </body>
 </html>
