Add media query for desktop in home page

--- a/src/html/about.html
+++ b/src/html/about.html
@@ -26,7 +26,7 @@
       </div>
       <button type="button" class="about__cv">
         <a
-          href="../files/CV-Natalia-Migallón-Front-end-CASTELLANO.pdf"
+          href="../files/CV.pdf"
           download="CV Natalia Migallón-Front-end-CASTELLANO.pdf"
           >Descargar CV</a
         >
