Add media query for desktop in about page

--- a/src/html/about.html
+++ b/src/html/about.html
@@ -14,7 +14,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="./assets/css/main.css" />
-    <link rel="icon" href="./assets/images/favicon-nat.png" />
+    <link rel="icon" href="./assets/images/favicon-nat-beige.png" />
   </head>
 
   <body class="page-about">
@@ -26,7 +26,7 @@
       </div>
       <button type="button" class="about__cv">
         <a
-          href="../files/CV.pdf"
+          href="./assets/files/CV.pdf"
           download="CV Natalia Migallón-Front-end-CASTELLANO.pdf"
           >Descargar CV</a
         >
