--- a/src/html/projects.html
+++ b/src/html/projects.html
@@ -14,7 +14,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="./assets/css/main.css" />
-    <link rel="icon" href="./assets/images/favicon-nat.png" />
+    <link rel="icon" href="./assets/images/favicon-nat-beige.png" />
   </head>
 
   <body class="page-projects">
@@ -31,7 +31,7 @@
       </div>
       <img
         src="./assets/images/projects-delicious.png"
-        alt=""
+        alt="Delicious Profile Cards"
         class="projects__image"
       />
       <h3 class="projects__title-works">Delicious Profile Cards</h3>
@@ -60,7 +60,7 @@
       </div>
       <img
         src="./assets/images/projects-rick-and-morty.png"
-        alt=""
+        alt="Rick and Morty Character Finder"
         class="projects__image"
       />
       <h3 class="projects__title-works">Rick and Morty Character Finder</h3>
@@ -93,7 +93,7 @@
       </div>
       <img
         src="./assets/images/projects-series-finder.png"
-        alt=""
+        alt="Series Finder"
         class="projects__image"
       />
       <h3 class="projects__title-works">Series Finder</h3>
@@ -124,7 +124,7 @@
       </div>
       <img
         src="./assets/images/projects-look-like-loop.png"
-        alt=""
+        alt="Look Like Loop Cards"
         class="projects__image"
       />
       <h3 class="projects__title-works">Look Like Loop Cards</h3>
@@ -157,7 +157,7 @@
       </div>
       <img
         src="./assets/images/projects-pokemon.png"
-        alt=""
+        alt="Pokemon"
         class="projects__image"
       />
       <h3 class="projects__title-works">Pokemon</h3>
@@ -188,7 +188,7 @@
       </div>
       <img
         src="./assets/images/projects-indemo.png"
-        alt=""
+        alt="#InDemo"
         class="projects__image"
       />
       <h3 class="projects__title-works">#InDemo</h3>
@@ -212,7 +212,7 @@
       </div>
       <img
         src="./assets/images/projects-anonymous.png"
-        alt=""
+        alt="Anonymous Proxy"
         class="projects__image"
       />
       <h3 class="projects__title-works">Anonymous Proxy</h3>
