--- a/src/html/projects.html
+++ b/src/html/projects.html
@@ -237,6 +237,7 @@
           >
         </button>
       </div>
+      <a href="#arrow" class="projects__arrow"><i class="far fa-arrow-alt-circle-up"></i></a>
     </main>
     <include src="./partials/footer.html"></include>
     <script src="./assets/js/main.js"></script>
