Fixed padding top home page and decoration links

--- a/src/html/about.html
+++ b/src/html/about.html
@@ -26,7 +26,7 @@
       </div>
       <button type="button" class="about__cv">
         <a
-          href="./assets/files/CV.pdf"
+          href="./assets/images/CV-Natalia-Migallón-Front-end-CASTELLANO.pdf"
           download="CV Natalia Migallón-Front-end-CASTELLANO.pdf"
           >Descargar CV</a
         >
