--- a/src/html/contact.html
+++ b/src/html/contact.html
@@ -44,7 +44,11 @@
           ><i class="fas fa-envelope"></i
         ></a>
       </span>
-      <form action="" method="post">
+      <form
+        autocomplete="off"
+        action="https://formspree.io/f/xleabjdr"
+        method="post"
+      >
         <div class="contact__wrapper">
           <div>
             <label for="firstName" class="contact__label">Nombre</label>
@@ -81,7 +85,9 @@
             />
           </div>
           <div class="contact__wrapper--textarea">
-            <label for="message" class="contact__textarea--label">Mensaje</label>
+            <label for="message" class="contact__textarea--label"
+              >Mensaje</label
+            >
             <textarea
               id="message"
               name="message"
