Add media query 600

--- a/src/html/about.html
+++ b/src/html/about.html
@@ -25,8 +25,7 @@
         <span class="about__title--icon">( )</span>
       </div>
       <button type="button" class="about__cv">
-        <a
-          href="./assets/images/CV-Natalia-Migallón-Front-end-CASTELLANO.pdf"
+        <a href="./assets/images/CV-Natalia-Migallón-Front-end-CASTELLANO.pdf"
           >Ver CV</a
         >
       </button>
@@ -51,17 +50,54 @@
         >, en donde he aprendido nuevos lenguajes y distintas formas de pensar,
         convirtiéndose el código en un ente indispensable en mi vida.
       </p>
-      <p class="about__text">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi,
-        dignissimos! Illum iure consectetur nostrum odio rerum deserunt
-        assumenda, reiciendis impedit repellendus dolores ab neque. Dolore fugit
-        quod deserunt vel eaque. Lorem ipsum dolor sit amet consectetur
-        adipisicing elit. Excepturi, dignissimos! Illum iure consectetur nostrum
-        odio rerum deserunt assumenda, reiciendis impedit repellendus dolores ab
-        neque. Dolore fugit quod deserunt vel eaque. Lorem ipsum dolor sit amet
-        consectetur adipisicing elit. Excepturi, dignissimos! Illum iure
-        consectetur nostrum odio rerum deserunt assumenda, reiciendis impedit
-        repellendus dolores ab neque. Dolore fugit quod deserunt vel eaque.
+      <p class="about__text"></p>
+      <h3 class="about__stack">Stack Tecnológico:</h3>
+      <ul>
+        <li class="about__stack--text">
+          Maquetación: HTML5, CSS3, Flexbox, CSS Grid, SASS, BEM, Bootstrap.
+        </li>
+        <li class="about__stack--text">
+          JavaScript (ES6) y servicios web (APIs) de terceros.
+        </li>
+        <li class="about__stack--text">
+          Creación de SPAs sencillas con React.
+        </li>
+        <li class="about__stack--text">
+          APIs: tipos de datos, verbos, modelos.
+        </li>
+        <li class="about__stack--text">
+          Node JS: uso, debugging y acceso al sistema de ficheros.
+        </li>
+        <li class="about__stack--text">
+          Express: servidores de estáticos, APIs, middlewares, motores de
+          plantillas.
+        </li>
+        <li class="about__stack--text">
+          SQL: creación y gestión de bases de tablas, modificación, borrado y
+          borrado lógico de registros.
+        </li>
+        <li class="about__stack--text">
+          Trabajo en remoto: Slack, Zoom, Discord, GitHub, GitHub projects,
+          VSCode, Gulp, Terminal, Linter, Zeplin.
+        </li>
+        <li class="about__stack--text">
+          Experiencia en planificación y ejecución de proyectos bajo el marco de
+          trabajo Scrum y filosofía Agile.
+        </li>
+      </ul>
+      <h3 class="about__hard">Hard Skills:</h3>
+      <i class="about__hard--icons fab fa-html5"></i
+      ><i class="about__hard--icons fab fa-css3-alt"></i
+      ><i class="about__hard--icons fab fa-sass"></i
+      ><i class="about__hard--icons fab fa-gulp"></i
+      ><i class="about__hard--icons fab fa-js-square"></i
+      ><i class="about__hard--icons fab fa-react"></i
+      ><i class="about__hard--icons fab fa-bootstrap"></i
+      ><i class="about__hard--icons fab fa-node"></i
+      ><i class="about__hard--icons fab fa-git-alt"></i>
+      <h3 class="about__soft">Soft Skills:</h3>
+      <p class="about__soft--text">
+        Compromiso, trabajo en equipo, dedicación.
       </p>
       <a href="#arrow" class="about__arrow"
         ><i class="far fa-arrow-alt-circle-up"></i
