Add links in logo, images and titles projects

--- a/src/html/projects.html
+++ b/src/html/projects.html
@@ -24,12 +24,15 @@
         <h1 class="projects__title--h1">Proyectos</h1>
         <span class="projects__title--icon">( )</span>
       </div>
-      <img
-        src="./assets/images/projects-delicious.png"
-        alt="Delicious Profile Cards"
-        class="projects__image"
-      />
-      <h3 class="projects__title-works">Delicious Profile Cards</h3>
+      <a href="https://delicious-profile-card.herokuapp.com/#/" target="_blank"
+        ><img
+          src="./assets/images/projects-delicious.png"
+          alt="Delicious Profile Cards"
+          class="projects__image"
+      /></a>
+      <a href="https://delicious-profile-card.herokuapp.com/#/" target="_blank"
+        ><h3 class="projects__title-works">Delicious Profile Cards</h3></a
+      >
       <h4 class="projects__tools">
         React.js | Express.js | SQLite | HTML5 | CSS3 (Flexbox, Grid) | SASS
       </h4>
@@ -53,12 +56,21 @@
           >
         </button>
       </div>
-      <img
-        src="./assets/images/projects-rick-and-morty.png"
-        alt="Rick and Morty Character Finder"
-        class="projects__image"
-      />
-      <h3 class="projects__title-works">Rick and Morty Character Finder</h3>
+      <a
+        href="https://nataliamigallon.github.io/Rick-and-Morty-character-finder/#/"
+        target="_blank"
+        ><img
+          src="./assets/images/projects-rick-and-morty.png"
+          alt="Rick and Morty Character Finder"
+          class="projects__image"
+      /></a>
+      <a
+        href="https://nataliamigallon.github.io/Rick-and-Morty-character-finder/#/"
+        target="_blank"
+        ><h3 class="projects__title-works">
+          Rick and Morty Character Finder
+        </h3></a
+      >
       <h4 class="projects__tools">
         React.js | HTML5 | CSS3 (Flexbox, Grid) | SASS
       </h4>
@@ -86,12 +98,15 @@
           >
         </button>
       </div>
-      <img
-        src="./assets/images/projects-series-finder.png"
-        alt="Series Finder"
-        class="projects__image"
-      />
-      <h3 class="projects__title-works">Series Finder</h3>
+      <a href="https://nataliamigallon.github.io/Series-Finder/" target="_blank"
+        ><img
+          src="./assets/images/projects-series-finder.png"
+          alt="Series Finder"
+          class="projects__image"
+      /></a>
+      <a href="https://nataliamigallon.github.io/Series-Finder/" target="_blank"
+        ><h3 class="projects__title-works">Series Finder</h3></a
+      >
       <h4 class="projects__tools">
         Vanilla Javascript | HTML5 | CSS3 (Flexbox, Grid) | SASS
       </h4>
@@ -117,12 +132,19 @@
           >
         </button>
       </div>
-      <img
-        src="./assets/images/projects-look-like-loop.png"
-        alt="Look Like Loop Cards"
-        class="projects__image"
-      />
-      <h3 class="projects__title-works">Look Like Loop Cards</h3>
+      <a
+        href="https://nataliamigallon.github.io/Look-Like-Loop-Cards/"
+        target="_blank"
+        ><img
+          src="./assets/images/projects-look-like-loop.png"
+          alt="Look Like Loop Cards"
+          class="projects__image"
+      /></a>
+      <a
+        href="https://nataliamigallon.github.io/Look-Like-Loop-Cards/"
+        target="_blank"
+        ><h3 class="projects__title-works">Look Like Loop Cards</h3></a
+      >
       <h4 class="projects__tools">
         Vanilla Javascript | HTML5 | CSS3 (Flexbox, Grid) | SASS | Gulp
       </h4>
@@ -150,12 +172,15 @@
           >
         </button>
       </div>
-      <img
-        src="./assets/images/projects-pokemon.png"
-        alt="Pokemon"
-        class="projects__image"
-      />
-      <h3 class="projects__title-works">Pokemon</h3>
+      <a href="https://nataliamigallon.github.io/Pokemons-List/" target="_blank"
+        ><img
+          src="./assets/images/projects-pokemon.png"
+          alt="Pokemon"
+          class="projects__image"
+      /></a>
+      <a href="https://nataliamigallon.github.io/Pokemons-List/" target="_blank"
+        ><h3 class="projects__title-works">Pokemon</h3></a
+      >
       <h4 class="projects__tools">
         React.js | HTML5 | CSS3 (Flexbox, Grid) | SASS
       </h4>
@@ -181,12 +206,15 @@
           >
         </button>
       </div>
-      <img
-        src="./assets/images/projects-indemo.png"
-        alt="#InDemo"
-        class="projects__image"
-      />
-      <h3 class="projects__title-works">#InDemo</h3>
+      <a href="https://nataliamigallon.github.io/InDemo/" target="_blank"
+        ><img
+          src="./assets/images/projects-indemo.png"
+          alt="#InDemo"
+          class="projects__image"
+      /></a>
+      <a href="https://nataliamigallon.github.io/InDemo/" target="_blank"
+        ><h3 class="projects__title-works">#InDemo</h3></a
+      >
       <h4 class="projects__tools">HTML5 | CSS3 (Flexbox, Grid) | SASS</h4>
       <p class="projects__text">
         Web colaborativa responsive que consta de diferentes secciones,
@@ -205,12 +233,18 @@
           >
         </button>
       </div>
-      <img
+      <a
+            href="https://nataliamigallon.github.io/Anonymous-Proxy/"
+            target="_blank"
+            ><img
         src="./assets/images/projects-anonymous.png"
         alt="Anonymous Proxy"
         class="projects__image"
-      />
-      <h3 class="projects__title-works">Anonymous Proxy</h3>
+      /></a>
+      <a
+            href="https://nataliamigallon.github.io/Anonymous-Proxy/"
+            target="_blank"
+            ><h3 class="projects__title-works">Anonymous Proxy</h3></a>
       <h4 class="projects__tools">HTML5 | CSS3 (Flexbox, Grid) | SASS</h4>
       <p class="projects__text">
         Web sencilla para practicar la maquetación responsive, haciendo uso de
@@ -232,7 +266,9 @@
           >
         </button>
       </div>
-      <a href="#arrow" class="projects__arrow"><i class="far fa-arrow-alt-circle-up"></i></a>
+      <a href="#arrow" class="projects__arrow"
+        ><i class="far fa-arrow-alt-circle-up"></i
+      ></a>
     </main>
     <include src="./partials/footer.html"></include>
     <script src="./assets/js/main.js"></script>
